row of recycler view and all json data class objects

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,11 +40,16 @@ dependencies {
     //recyclerView
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     //retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0' //Glide
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     //livedata
 
     def lifecycle_version = "2.2.0"
-    def arch_version = "2.1.0"
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
