--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
 
     implementation 'com.squareup.okhttp3:okhttp:4.3.1'
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -73,5 +73,7 @@ dependencies {
 
     //recyclerview divider
     implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
+
+    implementation 'android.arch.paging:runtime:1.0.0'
 
 }
