--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,10 +13,11 @@ android {
 
     defaultConfig {
         applicationId "com.example.movies"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -46,7 +47,7 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha10'
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
     //recyclerView
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     //retrofit
@@ -75,7 +76,16 @@ dependencies {
     //recyclerview divider
     implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
 
-    implementation 'android.arch.paging:runtime:1.0.1'
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
+
+    implementation 'com.jakewharton.rxbinding:rxbinding-appcompat-v7:0.4.0'
+
+    implementation "io.reactivex.rxjava2:rxjava:2.2.13"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+
+    implementation "com.jakewharton.rxbinding2:rxbinding:2.2.0"
+    implementation "com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0"
+
+    implementation 'androidx.multidex:multidex:2.0.1'
 
 }
