--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,11 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
+
     compileSdkVersion 30
     buildToolsVersion "30.0.1"
 
