--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileOptions {
@@ -103,4 +104,17 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-firestore-ktx:21.5.0'
 
-}
+    def koin_version = '2.1.6'
+
+
+        // Just Koin
+        implementation "org.koin:koin-android:$koin_version"
+
+        // Support for Android scopes
+        implementation "org.koin:koin-androidx-scope:$koin_version"
+
+        // Support for Android ViewModels
+        implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    }
+
+
