--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,6 +145,7 @@ dependencies {
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.8'
     testImplementation "org.robolectric:robolectric:4.3.1"
     testImplementation 'androidx.test:core:1.2.0'
+    testImplementation "io.mockk:mockk:1.10.0"
 }
 
 
