--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0' //Glide
+    implementation 'com.google.firebase:firebase-core:17.4.4'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     //livedata
 
@@ -135,13 +136,9 @@ dependencies {
 
     // Support for Android ViewModels
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
-
-    //crashlytics
-    implementation 'com.google.firebase:firebase-analytics-ktx:17.4.4'
-
     // Add the Firebase Crashlytics SDK.
     implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
-    
+
     //tests
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -156,5 +153,3 @@ dependencies {
 
 
 }
-
-
