--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,6 +139,8 @@ dependencies {
     // Add the Firebase Crashlytics SDK.
     implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
 
+    implementation "androidx.preference:preference-ktx:1.1.1"
+
     //tests
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
